--- a/css/style.css
+++ b/css/style.css
@@ -7,26 +7,27 @@
 }
 
 *{
-  background-color: rgb(247, 244, 239);  
+  background-color: rgb(247, 244, 239); 
+  margin: 0; 
 }
 
 /* ---header---  */
 header{
 border: 2px solid var(--antiquewhite);
-margin: 10px;
-padding: 5px;
 background-color: var(--dark);
 font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 h1{
 font-size: 30px;
+line-height: 50px;
 color: var(--antiquewhite);
 background-color: var(--dark);
 }
 
 #h1-p{
     font-size: 15px;
+    line-height: 35px;
     color: var(--off-white);
     background-color: var(--dark);
     }
@@ -63,6 +64,19 @@ background-color: var(--dark);
 
 /* need to make these into a grid */
 .projects {
-   display: grid;
+    border: var(--testborder);
+    display: grid;
     grid-template-columns: 50% 50%; 
+    max-width: auto;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
+.hero {
+    background-color: white;
+    background-image: url("../images/pastel-watercolor-painted-background.webp");
+    background-size: cover;
+    background-position: center;
 }
