--- a/css/style.css
+++ b/css/style.css
@@ -2,18 +2,18 @@
     --dark: #894d9b;
     --orange: #E9967A;
     --off-white: #FFFAF0;
-    --antiquewhite: #FAEBD7;
+    --white: whitesmoke;
     --testborder: 2px solid black;
 }
 
 *{
-  background-color: rgb(247, 244, 239); 
+  background-color: var(--white); 
   margin: 0; 
 }
 
 /* ---header---  */
 header{
-border: 2px solid var(--antiquewhite);
+border: 2px solid var(--white);
 background-color: var(--dark);
 font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
@@ -21,7 +21,7 @@ font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 h1{
 font-size: 30px;
 line-height: 50px;
-color: var(--antiquewhite);
+color: var(--white);
 background-color: var(--dark);
 }
 
@@ -41,10 +41,12 @@ background-color: var(--dark);
  /* ----About me---- */
  .intro{
     margin: auto;
-    margin-bottom: 20px;
-    margin-top: 20px;
     border: var(--testborder);
     height: 500px;
+    background-image: url(../images/light-blue-background.jpg);
+    background-repeat: no-repeat;
+    background-size: 75%;
+    background-position: center;
 }
     
 /* -----Projects------- */
@@ -70,8 +72,7 @@ background-color: var(--dark);
     max-width: auto;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 1rem;
-    padding-right: 1rem;
+    text-align: left;
 }
 
 .hero {
@@ -79,4 +80,6 @@ background-color: var(--dark);
     background-image: url("../images/pastel-watercolor-painted-background.webp");
     background-size: cover;
     background-position: center;
+    padding: 40px;
+    margin: 10px;
 }
