--- a/css/style.css
+++ b/css/style.css
@@ -34,10 +34,29 @@ background-color: var(--dark);
     
  nav{
     background-color: var(--dark);
-    display: inline-flex;
-
+    float: right;
+    font-size: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
-    
+
+nav ul {
+    list-style-type: none;
+}
+
+nav ul li {
+  display: inline-block;  
+}
+
+a:link, a:visited {
+    color:powderblue;
+    text-decoration: none;
+}
+ 
+a:hover, a:active {
+    color: cornflowerblue;
+}
+
  /* ----About me---- */
  .intro{
     margin: auto;
@@ -47,11 +66,16 @@ background-color: var(--dark);
     background-repeat: no-repeat;
     background-size: 75%;
     background-position: center;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
     
 /* -----Projects------- */
 .container {
-  display: block;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   margin-top: 20px;
   margin-bottom: 20px;
   border: var(--testborder);
@@ -60,16 +84,18 @@ background-color: var(--dark);
 
 .horiseon{
     margin: auto;
-    height: 300px;
+    height: 350px;
     padding: 20px;
+    background-image: url(../images/horiseon-screenshot\ \(2\).PNG);
+    background-size: cover;
 }
 
 /* need to make these into a grid */
 .projects {
     border: var(--testborder);
     display: grid;
-    grid-template-columns: 50% 50%; 
-    max-width: auto;
+    width: 100%;
+    grid-template-columns: repeat(2, 1fr); 
     margin-left: auto;
     margin-right: auto;
     text-align: left;
