--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 :root{
-    --dark: #894d9b;
+    --dark: #6caca8;
     --orange: #E9967A;
     --off-white: #FFFAF0;
     --white: whitesmoke;
@@ -7,22 +7,22 @@
 }
 
 *{
-  background-color: var(--white); 
-  margin: 0; 
+    background-color: var(--white); 
+    margin: 0; 
 }
 
 /* ---header---  */
 header{
-border: 2px solid var(--white);
-background-color: var(--dark);
-font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    border: 2px solid var(--white);
+    background-color: var(--dark);
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 h1{
-font-size: 30px;
-line-height: 50px;
-color: var(--white);
-background-color: var(--dark);
+    font-size: 30px;
+    line-height: 50px;
+    color: var(--white);
+    background-color: var(--dark);
 }
 
 #h1-p{
@@ -32,12 +32,15 @@ background-color: var(--dark);
     background-color: var(--dark);
     }
     
- nav{
+/* -----NAV----- */
+nav{
     background-color: var(--dark);
     float: right;
     font-size: 20px;
     padding-top: 10px;
     padding-bottom: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 nav ul {
@@ -45,7 +48,7 @@ nav ul {
 }
 
 nav ul li {
-  display: inline-block;  
+    display: inline-block;  
 }
 
 a:link, a:visited {
@@ -58,13 +61,13 @@ a:hover, a:active {
 }
 
  /* ----About me---- */
- .intro{
+.intro{
     margin: auto;
     border: var(--testborder);
     height: 500px;
     background-image: url(../images/light-blue-background.jpg);
     background-repeat: no-repeat;
-    background-size: 75%;
+    background-size: cover;
     background-position: center;
     display: flex;
     flex-direction: row;
@@ -84,10 +87,13 @@ a:hover, a:active {
 
 .horiseon{
     margin: auto;
-    height: 350px;
-    padding: 20px;
+    height: 500px;
     background-image: url(../images/horiseon-screenshot\ \(2\).PNG);
     background-size: cover;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    padding-right: 1000px;
+    padding left: 300px;
 }
 
 /* need to make these into a grid */
