--- a/css/style.css
+++ b/css/style.css
@@ -56,15 +56,16 @@ a:hover, a:active {
  
 /* -----Projects------- */
 
-.container {
+/* .container {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  background-size: cover;
   margin-top: 20px;
   margin-bottom: 20px;
   border: var(--testborder);
-  align-content: center;
-  background-size: cover;
+  /* align-content: center;
+  justify-items: stretch; */
 }
 
 /* ----About me---- */
@@ -79,7 +80,8 @@ a:hover, a:active {
     padding-top: 100px;
     padding-bottom: 100px;
     padding-right: 1000px;
-    padding left: 300px;
+    padding-left: 300px;
+    
 }
    
 .horiseon{
@@ -87,10 +89,11 @@ a:hover, a:active {
     height: 500px;
     background-image: url(../images/horiseon-screenshot\ \(2\).PNG);
     background-size: cover;
+    background-position: center;
     padding-top: 100px;
     padding-bottom: 100px;
     padding-right: 1000px;
-    padding left: 300px;
+    padding-left: 300px;
 }
 
 /* need to make these into a grid */
@@ -110,4 +113,33 @@ a:hover, a:active {
     background-position: center;
     padding: 40px;
     margin: 10px;
+} */
+
+/-*
+.container{
+    display:grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: 100px;
+    grid-gap: 1em;
 }
+
+.intro {
+    grid-column: 3;
+    grid-row: 1/2;
+    background-image: url(../images/light-blue-background.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.horiseon {
+    grid-column: 3;
+    grid-row: 1/2;
+    background-image: url(../images/horiseon-screenshot\ \(2\).PNG);
+    background-size: cover;
+    background-position: center;
+}
+
+.projects {
+}
+*-/
