nav overhaul, container grid revision

--- a/css/style.css
+++ b/css/style.css
@@ -6,71 +6,75 @@
     --testborder: 2px solid black;
 }
 
-/* *{
-    background-color: var(--white); 
-    margin: 0; 
-} */
+*{
+    margin:0;
+    padding: 0%;
+    box-sizing: border-box;
+}
 
+body{
+    height: 100%;
+    min-height: 100%;
+}
 /* ---HEADER---  */
 header{
     border: 2px solid var(--white);
     background-color: var(--dark);
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    display: in;
+    display: inline;
+    vertical-align: middle;
 }
 
 h1{
-    font-size: 30px;
-    line-height: 50px;
-    color: var(--white);
-    background-color: var(--dark);
+    padding: 200px 0;
+    height: 100%;
+    font-size: 2em;
+    text-align: center;
+    line-height: 40px:
 }
     
     /* -----NAV----- */
 nav{
-    background-color: var(--dark);
-    font-size: 20px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    /* float: right; */
+    width: 100%;
+    height: 60px;
+    position: fixed;
+    top: 0;
 }
 
 nav ul {
-    list-style-type: none;
+    padding:20px;
+    margin: 0 auto;
+    list-style: none;
+    text-align: center;
 }
 
 nav ul li {
-    display: inline-block;  
+    display: inline-block;
+    margin: 0 10px;
 }
 
-a:link, a:visited {
-    color:powderblue;
-    text-decoration: none;
+a{
+   padding: 10px 0;
+        color: var(--dark);
+        font-size: 1rem;
+        text-decoration: none;
+        font-weight: bold;
+        transition: all 0.2s ease; 
 }
- 
-a:hover, a:active {
-    color: cornflowerblue;
-}
- 
+
 /* -----Projects------- */
 
-/* .container {
+.container {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   background-size: cover;
   margin-top: 20px;
   margin-bottom: 20px;
-  border: var(--testborder);
-  /* align-content: center;
-  justify-items: stretch; */
 }
 
 /* ----About me---- */
 .intro{
-    border: var(--testborder);
     margin: auto;
     height: 500px;
     background-image: url(../images/light-blue-background.jpg);
@@ -81,11 +85,10 @@ a:hover, a:active {
     padding-bottom: 100px;
     padding-right: 1000px;
     padding-left: 300px;
-    
+    margin-bottom: 100px;
 }
    
 .horiseon{
-    margin: auto;
     height: 500px;
     background-image: url(../images/horiseon-screenshot\ \(2\).PNG);
     background-size: cover;
@@ -94,11 +97,11 @@ a:hover, a:active {
     padding-bottom: 100px;
     padding-right: 1000px;
     padding-left: 300px;
+    margin-bottom: 50px;
 }
 
 /* need to make these into a grid */
-.projects {
-    border: var(--testborder);
+ .projects {
     display: grid;
     width: 100%;
     grid-template-columns: repeat(2, 1fr); 
@@ -115,31 +118,42 @@ a:hover, a:active {
     margin: 10px;
 } */
 
-/-*
+/* 
 .container{
     display:grid;
     grid-template-columns: repeat(2, 1fr);
     grid-auto-rows: 100px;
     grid-gap: 1em;
+    
 }
 
 .intro {
-    grid-column: 3;
+    grid-column: 1/3;
     grid-row: 1/2;
     background-image: url(../images/light-blue-background.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    padding-right: 1000px;
+    padding-left: 300px;
+}
 }
 
 .horiseon {
-    grid-column: 3;
+    grid-column: 1/3;
     grid-row: 1/2;
     background-image: url(../images/horiseon-screenshot\ \(2\).PNG);
     background-size: cover;
     background-position: center;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    padding-right: 1000px;
+    padding-left: 300px;
+}
 }
 
 .projects {
 }
-*-/
+ */
