--- a/css/style.css
+++ b/css/style.css
@@ -98,8 +98,8 @@ nav a{
     background-position: center;
     padding-top: 100px;
     padding-bottom: 100px;
-    padding-right: 500px;
-    padding-left: 500px;
+    padding-right: 400px;
+    padding-left: 400px;
     margin-bottom: 100px;
     /* border-radius: 10% / 50%; */
 }
@@ -111,9 +111,10 @@ nav a{
 
 .imgMar {
     border-radius: 50%;
-    max-width: 50%;
+    width: 70%;
     height: auto;
-    align-items: left;
+    display: block;
+    
     filter: grayscale(100%);
 }
 
@@ -151,42 +152,35 @@ nav a{
     margin: 10px;
 } */
 
-/* 
-.container{
-    display:grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-auto-rows: 100px;
-    grid-gap: 1em;
-    
-}
-
-.intro {
-    grid-column: 1/3;
-    grid-row: 1/2;
-    background-image: url(../images/light-blue-background.jpg);
-    background-repeat: no-repeat;
+/* -----CONTACT ME------ */
+.contactContainer {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     background-size: cover;
-    background-position: center;
-    padding-top: 100px;
-    padding-bottom: 100px;
-    padding-right: 1000px;
-    padding-left: 300px;
-}
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
-.horiseon {
-    grid-column: 1/3;
-    grid-row: 1/2;
-    background-image: url(../images/horiseon-screenshot\ \(2\).PNG);
-    background-size: cover;
-    background-position: center;
-    padding-top: 100px;
-    padding-bottom: 100px;
-    padding-right: 1000px;
-    padding-left: 300px;
-}
+.contactMe{
+    padding:20px;
+    margin: 0 auto;
+    list-style: none;
+    text-align: center;
+    color: black;
 }
 
-.projects {
+.contactMe li{
+    display: inline;
+    justify-content: space-between;
+    margin: 0 10px;
 }
- */
+
+.contact-link {
+    padding: 10px 0;
+    color: black;
+    font-size: 1rem;
+    font-weight: bold;
+    transition: all 0.2s ease;
+    text-decoration: none;
+}
