--- a/css/style.css
+++ b/css/style.css
@@ -74,12 +74,12 @@ nav a{
 /* -----Projects------- */
 
 .container {
-    display: flex;
+    /* display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     background-size: cover;
     margin-top: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 20px; */
 }
 
 /* ----About me---- */
@@ -110,16 +110,17 @@ nav a{
 }
 
 .imgMar {
-    border-radius: 50%;
-    width: 70%;
+    border-radius: 20px;
+    border: 2px solid black;
+    width: 300px;
     height: auto;
     display: block;
-    
     filter: grayscale(100%);
+    position: top -10px;
 }
 
 .horiseon{
-    margin: auto;
+    /* margin: auto;
     height: 500px;
     background-image: url(../images/horiseon-screenshot\ \(2\).PNG);
     background-size: cover;
@@ -128,7 +129,23 @@ nav a{
     padding-bottom: 200px;
     padding-right: 500px;
     padding-left: 500px;
-    margin-bottom: 50px;
+    margin-bottom: 50px; */
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 5px;
+    width: 1000px;
+    height: fit-content;
+    margin: auto;
+}
+
+.horimg{
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 5px;
+    width: 1000px;
+    /* margin-left: auto;
+    margin-right: auto;
+    display: block; */
 }
 
 /* need to make these into a grid */
@@ -153,6 +170,7 @@ nav a{
 } */
 
 /* -----CONTACT ME------ */
+/* change line height*/
 .contactContainer {
     display: flex;
     flex-direction: row;
@@ -190,3 +208,16 @@ nav a{
     text-align: center;
     background-color: var(--lightblue);
 }
+
+/* ----FOOTER---- */
+footer{
+    background-color: var(--lightblue);
+    margin: auto;
+
+}
+
+footer h2 {
+    text-align: center;
+}
+
+/* query media */
