--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 :root{
     --grey: rgb(141, 141, 141);
-    --orange: #E9967A;
+    --darkgray: #616161;
     --off-white: #FFFAF0;
     --white: whitesmoke;
     --testborder: 2px solid black;
@@ -96,27 +96,88 @@ nav a{
     padding: 20px;
     margin-top: 20px;
     margin-bottom: 50px;
+
+    /* position: relative;
+    width: 50%; */
 }
 
 .aboutMe {
-    font-size: 2em;
+    font-size: 40px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: left;
+    margin: 20px;
+    color: var(--off-white);
 }
 
 .myinfo {
-    display: flex;
+    /* display: flex;
     flex-wrap: wrap;
-    width: 400px;
-    line-height: 20px;
+    /* width: 300px; */
+    /* line-height: 20px;
+    max-width: 100%;
+    padding-right: 500px;
+    margin: auto;  */
+
+    /* white-space: nowrap; 
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    overflow: hidden;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%); */
+}
+
+.imgcontainer{
+    position: relative; 
+    display: block; 
+    overflow: hidden;
 }
 
 .imgMar {
-    border-radius: 20px;
-    border: 2px solid black;
-    width: 300px;
+    /* border-radius: 20px;
+    border: 2px solid black; */
+    /* vertical-align: sub; */
+    max-width: 50%;
+    width: 400px;
     height: auto;
-    display: block;
+    /* display: block; */
     position: top -10px;
+    /* opacity: .85; */
+    border-radius: 10px;
+}
+
+.imgcontainer .myinfo {
+    position: absolute; 
+    display: flex; 
+    flex-wrap: wrap;
+    top: 0; 
+    left: 0; 
+    border-radius: 10px;
+    height: 100%; 
+    width: 400px;
+    margin: 10px;
+    margin-right: 0; 
+    opacity: 0; 
+    transition: all .2s ease-in-out;
+    line-height: 35px;
+    font-size: 20px;
+    text-align: center;
+    color: black;
+}
+
+.imgcontainer:hover .myinfo{
+    /* opacity: 1; */
+    /* background: rgb(255,229,193);
+    background: linear-gradient(90deg, rgba(255,229,193,1) 0%, rgba(161,214,241,1) 50%, rgba(40,90,158,1) 100%);opacity: 0.5; */
+    background: rgb(236,225,205);
+    background: radial-gradient(circle, rgba(236,225,205,1) 0%, rgba(192,219,250,1) 100%);
+    opacity: 0.5;
+}
+
+.imgMar:hover {
+    opacity: 0.7;
 }
 
 .horiseon{
