--- a/css/style.css
+++ b/css/style.css
@@ -75,14 +75,8 @@ nav a{
 }
 
 /* -----Projects------- */
-
 .container {
-    /* display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    background-size: cover;
-    margin-top: 20px;
-    margin-bottom: 20px; */
+    margin-bottom: 50px;
 }
 
 /* ----About me---- */
@@ -96,9 +90,6 @@ nav a{
     padding: 20px;
     margin-top: 20px;
     margin-bottom: 50px;
-
-    /* position: relative;
-    width: 50%; */
 }
 
 .aboutMe {
@@ -109,26 +100,7 @@ nav a{
     color: var(--off-white);
 }
 
-.myinfo {
-    /* display: flex;
-    flex-wrap: wrap;
-    /* width: 300px; */
-    /* line-height: 20px;
-    max-width: 100%;
-    padding-right: 500px;
-    margin: auto;  */
-
-    /* white-space: nowrap; 
-    color: white;
-    font-size: 20px;
-    position: absolute;
-    overflow: hidden;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%); */
-}
-
+/* -----ABOUT ME IMAGE----- */
 .imgcontainer{
     position: relative; 
     display: block; 
@@ -136,15 +108,10 @@ nav a{
 }
 
 .imgMar {
-    /* border-radius: 20px;
-    border: 2px solid black; */
-    /* vertical-align: sub; */
     max-width: 50%;
     width: 400px;
     height: auto;
-    /* display: block; */
     position: top -10px;
-    /* opacity: .85; */
     border-radius: 10px;
 }
 
@@ -168,9 +135,6 @@ nav a{
 }
 
 .imgcontainer:hover .myinfo{
-    /* opacity: 1; */
-    /* background: rgb(255,229,193);
-    background: linear-gradient(90deg, rgba(255,229,193,1) 0%, rgba(161,214,241,1) 50%, rgba(40,90,158,1) 100%);opacity: 0.5; */
     background: rgb(236,225,205);
     background: radial-gradient(circle, rgba(236,225,205,1) 0%, rgba(192,219,250,1) 100%);
     opacity: 0.5;
@@ -180,6 +144,20 @@ nav a{
     opacity: 0.7;
 }
 
+/* ------WORK TITLE----- */
+.work{
+    margin: 20px;
+    padding: 10px;
+    width: 1000px;
+    line-height: 50px;
+    font-size: 40px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    /* align-items: center;
+    justify-content: center;
+    display: flex; */
+}
+
+/* ------HORISEON------- */
 .horiseon{
     border: 1px solid #ddd;
     border-radius: 4px;
@@ -196,11 +174,12 @@ nav a{
     width: 1000px;
 }
 
-/* need to make these into a grid */
+/* -------GRID PROJECT GALLERY------ */
 .projects {
     margin: auto;
     display: grid;
-    width: 1200px;
+    /* width: 1200px; */
+    width: auto;
     height: auto;
     grid-template-columns: repeat(2, 1fr); 
     column-gap: 1em;
@@ -218,13 +197,12 @@ nav a{
 } */
 
 /* -----CONTACT ME------ */
-/* change line height*/
 .contactContainer {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     background-size: cover;
-    margin-top: 20px;
+    margin-top: 50px;
     margin-bottom: 20px;
 }
 
@@ -255,11 +233,11 @@ nav a{
 .contacttitle {
     text-align: center;
     background-color: var(--lightblue);
+    line-height: 40px;
 }
 
 /* ----FOOTER---- */
 footer{
-    /* background-color: var(--lightblue); */
     background-color: var(--grey);
     margin: auto;
     padding: 10px;
@@ -270,4 +248,4 @@ footer h2 {
     text-align: center;
 }
 
-/* query media */
+/* -----QUERY MEDIA------ */
